syntax="proto3";

package phase_proto;
import "google/protobuf/Empty.proto";
option go_package = "/phase";

service PhaseEqualibrium {
   // rpc Init(InitMessageRequest) returns (initMessageResponse);
    rpc vle(vleMessageRequest) returns (vleMessageResponse);
    rpc Init(InitMessageRequest) returns (google.protobuf.Empty);
}


message OneComponent{
    string Component = 1;
    double MoleFraction = 2;
    double MolMass = 3;
    double Tcr = 4;
    double Pcr = 5;
    double wFact = 6;
    double Tb = 7;
    double Vcr = 8;
    double Pen = 9;
    }

message OneBIP{
    repeated double Num = 1;
}

message InitMessageRequest{
    repeated OneComponent FLUID = 1;
    repeated OneBIP BIPs = 2;
}

message initMessageResponse{
repeated OneBIP BIPs = 1;
repeated OneComponent FLUID = 2;
}

message vleMessageRequest {
    double temp = 1; // расчитывается 1 температура
    double pres = 2; // расчитывается 1 давление
}

message vleMessageResponse {
    double L = 1; // 1-W = L
    double Z_l = 2; // Zl
    double Z_v = 3; // Zv
    repeated double x_i = 4; // x_i
    repeated double y_i = 5; // y_i
}

